# auto_py_bot

./: .gitignore  Makefile  QUICKSTART.md  README.md  backtest.py  config.json  data_collector.py  enhanced_bot.py  ml_model.py  pyproject.toml  requirements.txt  run_24_7.py  sol_strategies.py  trading_bot.py  trading_database.py  train_model.py  utils.py
.github/workflows/: ci.yml
deploy/: Dockerfile  auto-py-bot.service  docker-compose.yml
docs/: PROJECT_STRUCTURE.md  ROADMAP_TASKS.md
scripts/: backtest.py  enhanced_bot.py  run_24_7.py  trading_bot.py  train_model.py  utils.py
src/auto_py_bot/: __init__.py  backtest.py  enhanced_bot.py  risk_manager.py  run_24_7.py  telegram_notifier.py  trading_bot.py  train_model.py
tests/: test_project_structure.py
