[tool.poetry]
name = "auto-py-bot"
version = "0.1.0"
description = "Bot de trading automatizado con ML para criptomonedas"
authors = ["auto_py_bot maintainers"]
readme = "README.md"
packages = [{ include = "auto_py_bot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
ccxt = ">=4.0.0"
pandas = ">=2.0.0"
requests = ">=2.31.0"
tqdm = ">=4.65.0"
python-dateutil = ">=2.8.2"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
psutil = ">=5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
coverage = ">=7.0.0"
mypy = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
